Add Node.js engine version requirement

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,6 +69,11 @@
       "not dead",
       "not op_mini all"
     ],
+    {
+    "engines": {
+      "node": "18.x"
+    }
+  },
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
